# handle_detector

./: CHANGELOG.rst  CHANGELOG.rst~  CMakeLists.txt  Doxyfile  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  gbp.conf  rules
html/: affordances_8h_source.html  annotated.html  class_affordances-members.html  class_affordances.html  class_cylindrical_shell-members.html  class_cylindrical_shell.html  class_messages-members.html  class_messages.html  class_visualizer-members.html  class_visualizer.html  classes.html  classpcl_1_1_curvature_estimation_taubin-members.html  classpcl_1_1_curvature_estimation_taubin.html  curvature__estimation__taubin_8h_source.html  curvature__estimation__taubin_8hpp_source.html  cylindrical__shell_8h_source.html  files.html  functions.html  functions_func.html  index.html  messages_8h_source.html  struct_workspace_limits-members.html  struct_workspace_limits.html  structpcl_1_1_point_curvature_taubin-members.html  structpcl_1_1_point_curvature_taubin.html  visualizer_8h_source.html
html/search/: all_63.js  all_66.js  all_68.js  all_69.js  all_6d.js  all_73.js  all_76.js  all_77.js  classes_61.js  classes_63.js  classes_6d.js  classes_70.js  classes_76.js  classes_77.js  functions_63.js  functions_65.js  functions_67.js  functions_6d.js  functions_76.js  search.js
include/handle_detector/: affordances.h  curvature_estimation_taubin.h  curvature_estimation_taubin.hpp  cylindrical_shell.h  messages.h  sampling.h  sampling_visualizer.h  visualizer.h
latex/: annotated.tex  class_affordances.tex  class_cylindrical_shell.tex  class_messages.tex  class_visualizer.fdb_latexmk  class_visualizer.tex  classpcl_1_1_curvature_estimation_taubin.tex  doxygen.sty  refman.aux  refman.idx  refman.ilg  refman.out  refman.tex  refman.toc  struct_workspace_limits.tex  structpcl_1_1_point_curvature_taubin.tex
launch/: importance_sampling_pcd_file.launch  localization_pcd_file.launch  localization_sensor.launch
msg/: CylinderArrayMsg.msg  CylinderMsg.msg  HandleListMsg.msg
rviz/: baxter.rviz  importance_sampling.rviz  localization_pcd_file.rviz
src/: affordances.cpp  affordances.h  curvature_estimation_taubin.h  curvature_estimation_taubin.hpp  cylindrical_shell.cpp  importance_sampling.cpp  localization.cpp  messages.cpp  messages.h  sampling.cpp  sampling_visualizer.cpp  visualizer.cpp  visualizer.h
